...
            )
            Spacer(modifier = Modifier.height(6.dp))
            KoinTextField(
                value = state.phoneNumber,
                onValueChange = onPhoneNumberChanged,
                modifier = Modifier.fillMaxWidth(),
                placeholder = "010-0000-0000",
                visualTransformation = PhoneVisualTransformation,
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Phone,
                    imeAction = ImeAction.Next
                )
            )
...
